// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmploymentTypeField /> matches snapshot 1`] = `
<select
  class="sc-dIvqjp cnqptG"
  id="employmentTypeField"
  name="name"
  type="text"
>
  <option
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="fixed"
  >
    umowa o pracę na czas nieokreślony
  </option>
  <option
    value="temporary"
  >
    umowa o pracę na czas określony
  </option>
  <option
    value="self_employed"
  >
    samozatrudnienie
  </option>
  <option
    value="fixed_partial"
  >
    umowa o pracę na czas nieokreślony (niepełny etat)
  </option>
  <option
    value="government"
  >
    stanowisko rządowe
  </option>
  <option
    value="unemployed"
  >
    bezrobotny
  </option>
  <option
    value="pension"
  >
    emeryt/rencista
  </option>
  <option
    value="agriculture"
  >
    gospodarstwo rolne
  </option>
  <option
    value="student"
  >
    student
  </option>
  <option
    value="housewife"
  >
    gospodyni domowa
  </option>
  <option
    value="other"
  >
    inne
  </option>
  <option
    value="service_contract"
  >
    umowa zlecenie / umowa o dzieło
  </option>
</select>
`;

exports[`<EmploymentTypeField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-iemXMA clxLOp"
      >
        <select
          class="sc-dIvqjp gBHSSD"
          id="employmentTypeField"
          label="Test"
          name="name"
          required=""
          type="text"
        >
          <option
            disabled=""
            value="select"
          >
            wybierz *
          </option>
          <option
            value="fixed"
          >
            umowa o pracę na czas nieokreślony
          </option>
          <option
            value="temporary"
          >
            umowa o pracę na czas określony
          </option>
          <option
            value="self_employed"
          >
            samozatrudnienie
          </option>
          <option
            value="fixed_partial"
          >
            umowa o pracę na czas nieokreślony (niepełny etat)
          </option>
          <option
            value="government"
          >
            stanowisko rządowe
          </option>
          <option
            value="unemployed"
          >
            bezrobotny
          </option>
          <option
            value="pension"
          >
            emeryt/rencista
          </option>
          <option
            value="agriculture"
          >
            gospodarstwo rolne
          </option>
          <option
            value="student"
          >
            student
          </option>
          <option
            value="housewife"
          >
            gospodyni domowa
          </option>
          <option
            value="other"
          >
            inne
          </option>
          <option
            value="service_contract"
          >
            umowa zlecenie / umowa o dzieło
          </option>
        </select>
        <span
          class="sc-hHEjAm gimkwY"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<EmploymentTypeField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-iemXMA clxLOp"
      >
        <select
          class="sc-dIvqjp cnqptG"
          id="employmentTypeField"
          label="Test"
          name="name"
          type="text"
        >
          <option
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="fixed"
          >
            umowa o pracę na czas nieokreślony
          </option>
          <option
            value="temporary"
          >
            umowa o pracę na czas określony
          </option>
          <option
            value="self_employed"
          >
            samozatrudnienie
          </option>
          <option
            value="fixed_partial"
          >
            umowa o pracę na czas nieokreślony (niepełny etat)
          </option>
          <option
            value="government"
          >
            stanowisko rządowe
          </option>
          <option
            value="unemployed"
          >
            bezrobotny
          </option>
          <option
            value="pension"
          >
            emeryt/rencista
          </option>
          <option
            value="agriculture"
          >
            gospodarstwo rolne
          </option>
          <option
            value="student"
          >
            student
          </option>
          <option
            value="housewife"
          >
            gospodyni domowa
          </option>
          <option
            value="other"
          >
            inne
          </option>
          <option
            value="service_contract"
          >
            umowa zlecenie / umowa o dzieło
          </option>
        </select>
        <span
          class="sc-hHEjAm gimkwY"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`<EmploymentTypeField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <div
        class="sc-iemXMA clxLOp"
      >
        <select
          class="sc-dIvqjp gBHSSD"
          id="employmentTypeField"
          name="name"
          type="text"
        >
          <option
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="fixed"
          >
            umowa o pracę na czas nieokreślony
          </option>
          <option
            value="temporary"
          >
            umowa o pracę na czas określony
          </option>
          <option
            value="self_employed"
          >
            samozatrudnienie
          </option>
          <option
            value="fixed_partial"
          >
            umowa o pracę na czas nieokreślony (niepełny etat)
          </option>
          <option
            value="government"
          >
            stanowisko rządowe
          </option>
          <option
            value="unemployed"
          >
            bezrobotny
          </option>
          <option
            value="pension"
          >
            emeryt/rencista
          </option>
          <option
            value="agriculture"
          >
            gospodarstwo rolne
          </option>
          <option
            value="student"
          >
            student
          </option>
          <option
            value="housewife"
          >
            gospodyni domowa
          </option>
          <option
            value="other"
          >
            inne
          </option>
          <option
            value="service_contract"
          >
            umowa zlecenie / umowa o dzieło
          </option>
        </select>
        <span
          class="sc-hHEjAm gimkwY"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;
